# ocr-web

./: app.yaml  main.py  practice.py  pyproject.toml  requirements.txt
